@@ -199,6 +199,11 @@
   <dt><a name="observational_congruence">adj. observational congruency:</a></dt> <dd>a subset of observable states of one module are identical with a subset of the observable states of another module.
   </dd>
 
+  <dt><a name="parallax modeling">n. parallax modeling:</a></dt>
+  <dd>The approach to modeling a referent system with multiple models, each of which may model different aspects/facets or sets of attributes of that referent.
+    <br>Notes: "Triangulation" is often used as a synonym.  Parallax relies heavily on cross-model validation; and in the event the referent system is unavailable for experimentation, cross-model validation is the only way to approach an accurate model.
+  </dd>
+
   <dt><a name="parallel">n. parallel:</a></dt> <dd>having comparable parts, analogous aspects, or readily recognized similarities; having the same tendency or direction; continuing a resemblance through many particulars; applicable in all essential parts; alike; similar.
     <br>Notes: The gist of the word is to be alike, to have the same properties or tendencies.
   </dd>
