@@ -1,3 +1,7 @@
+2019-01-07-09:55  gepr  <gepr@tempusdictum.com>
+
+	* glossary.html: Add parallax modeling to the glossary.
+
 2019-01-03-16:01  gepr  <gepr@tempusdictum.com>
 
 	* glossary.html: Add mode, modal, and modality to glossary.
